--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Steppor
 email: palipalo9@googlemail.com
 description: "A Launchpad Step-Sequencer for Renoise"
 keywords: "Renoise, Launchpad, Steppor, Step-Sequencer"
-baseurl: "/stepp0r"
+baseurl: "/midi-respons0r"
 url: "http://mrvandalo.github.io"
 
 actual_version: "Stepp0r-0.60.xrnx"
